# xplr

./: .codespellignore  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  config.yml  default.nix  flake.nix  index.html  init.lua  rustfmt.toml
.cargo/: config  config.toml
.github/: FUNDING.yml
.github/workflows/: book.yml  cd.yml  ci.yml  daily-compile.yml  nix-cache.yml
assets/desktop/: xplr.desktop
benches/: criterion.rs  navigation.rs
css/: default.css  pink.css  yellow.css
docs/: index.html  index_novo.html  style.css
docs/en/: book.toml
docs/en/src/: SUMMARY.md  alternatives.md  awesome-hacks.md  awesome-integrations.md  awesome-plugins.md  borders.md  column-renderer.md  community.md  concept.md  configuration.md  configure-key-bindings.md  configure.md  contribute.md  debug-key-bindings.md  default-key-bindings.md  environment-variables-and-pipes.md  filtering.md  general-config.md  input-operation.md  install.md  installing-plugins.md  integration.md  introduction.md  key-bindings.md  layout.md  layouts.md  lua-function-calls.md  message.md  messages.md  mode.md  modes.md  node-type.md  node_types.md  plugin.md  post-install.md  quickstart.md  searching.md  sorting.md  style.md  sum-type.md  (+4 more)
docs/en/theme/: index.hbs
docs/landing/: en  index.html
docs/landing/css/: blue.css  cyan.css  green.css  indigo.css  orange.css  purple.css  red.css
docs/landing/scss/: _custom.scss  _variables.scss
docs/script/: deploy-cf.sh  generate.lua  generate.py
docs/version2/: index.html  style.css
en/: 404.html  alternatives.html  awesome-hacks.html  awesome-integrations.html  awesome-plugins.html  borders.html  column-renderer.html  community.html  concept.html  configuration.html  configure-key-bindings.html  contribute.html  debug-key-bindings.html  default-key-bindings.html  environment-variables-and-pipes.html  filtering.html  general-config.html  index.html  input-operation.html  install.html  installing-plugins.html  integration.html  introduction.html  key-bindings.html  layout.html  layouts.html  lua-function-calls.html  message.html  messages.html  mode.html  modes.html  node-type.html  node_types.html  plugin.html  post-install.html  print.html  quickstart.html  searchindex.js  searchindex.json  searching.html  (+7 more)
en/html/: 404.html  alternatives.html  awesome-hacks.html  awesome-integrations.html  awesome-plugins.html  borders.html  concept.html  configure-key-bindings.html  contribute.html  debug-key-bindings.html  default-key-bindings.html  general-config.html  installing-plugins.html  integration.html  introduction.html  key-bindings.html  message.html  messages.html  node-type.html  print.html  quickstart.html  searchindex.js  searchindex.json  style.html  upgrade-guide.html  writing-plugins.html
examples/: run.rs
features/: default_key_bindings.feature
js/: scripts.js
snap/: snapcraft.yaml
src/: __cache__.lua  app.rs  auto_refresher.rs  cli.rs  compat.rs  config.rs  config.yml  default_config.rs  directory_buffer.rs  dirs.rs  error.rs  event_reader.rs  explorer.rs  init.lua  input.rs  lib.rs  lua.rs  main.rs  newlines.rs  node.rs  owner.rs  path.rs  permissions.rs  pipe.rs  pipe_reader.rs  pwd_watcher.rs  runner.rs  search.rs  ui.rs  yaml.rs
src/lua/: mod.rs  util.rs
src/msg/: mod.rs
src/msg/in_/: external.rs  internal.rs  mod.rs
tests/: cucumber.rs  mod.rs  test_config.rs  test_input.rs  test_task.rs  test_ui.rs  test_version.rs  test_xplr.rs
tests/steps/: key_bindings.rs  mod.rs
tests/unit/: config.rs  mod.rs
