[[bin]]
name = 'xplr'

[[bench]]
name = 'criterion'
harness = false
path = './benches/criterion.rs'

[package]
name = 'xplr'
version = '0.21.10'
authors = ['Arijit Basu <hi@arijitbasu.in>']
edition = '2021'
description = 'A hackable, minimal, fast TUI file explorer'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/sayanarijit/xplr'
homepage = 'https://xplr.dev'
documentation = 'https://xplr.dev/en'
keywords = ['terminal', 'file', 'explorer', 'manager', 'tui']
categories = ['command-line-interface', 'command-line-utilities']
include = ['src/**/*', 'docs/en/src/**/*', 'LICENSE', 'README.md']

[dependencies]
libc = { version = "0.2.169", default-features = false }
humansize = "2.1.3"
natord = "1.0.9"
anyhow = "1.0.95"
serde_yaml = "0.9.34"
crossterm = { version = "0.28.1", features = [], default-features = false }
ansi-to-tui = "7.0.0"
regex = "1.11.1"
gethostname = "0.5.0"
serde_json = "1.0.138"
path-absolutize = "3.1.1"
which = "7.0.1"
nu-ansi-term = "0.50.1"
textwrap = "0.16.1"
snailquote = "0.3.1"
skim = "0.16.0"
time = { version = "0.3.37", features = ["serde", "local-offset", "formatting", "macros"] }
jf = "0.6.2"
xdg = "2.5.2"
home = "0.5.11"

[dependencies.lscolors]
version = "0.20.0"
default-features = false
features = ["nu-ansi-term"]

[dependencies.lazy_static]
version = "1.5.0"
default-features = false

[dependencies.mime_guess]
version = "2.0.5"
default-features = false

[dependencies.tui]
version = "0.29.0"
default-features = false
features = ['crossterm', 'serde']
package = 'ratatui'

[dependencies.serde]
version = "1.0.217"
features = []
default-features = false

[dependencies.indexmap]
version = "2.7.1"
features = ['serde']

[dependencies.mlua]
version = "0.10.3"
features = ['luajit', 'serialize', 'send']

[dependencies.tui-input]
version = "0.11.1"
features = ['serde']

[dev-dependencies]
criterion = "0.5.1"
assert_cmd = "2.0.16"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[features]
default = ["vendored-lua"]
vendored-lua = ["mlua/vendored"]
