[[bin]]
name = 'xplr'

[[bench]]
name = 'criterion'
harness = false
path = './benches/criterion.rs'

[package]
name = 'xplr'
version = '1.1.0'
authors = ['Arijit Basu <hi@arijitbasu.in>']
edition = '2021'
description = 'A hackable, minimal, fast TUI file explorer'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/sayanarijit/xplr'
homepage = 'https://xplr.dev'
documentation = 'https://xplr.dev/en'
keywords = ['terminal', 'file', 'explorer', 'manager', 'tui']
categories = ['command-line-interface', 'command-line-utilities']
include = ['src/**/*', 'docs/en/src/**/*', 'LICENSE', 'README.md']

[dependencies]
libc = "0.2"
humansize = "2.1"
natord = "1.0"
anyhow = "1.0"
serde_yaml = "0.9"
ansi-to-tui = "7.0"
regex = "1.12"
gethostname = "1.1"
serde_json = "1.0"
path-absolutize = "3.1"
which = "8.0"
nu-ansi-term = "0.50"
textwrap = "0.16"
snailquote = "0.3"
skim = "0.18"
time = { version = "0.3", features = [
  "serde",
  "local-offset",
  "formatting",
  "macros",
] }
jf = "0.6"
xdg = "3.0"
home = "0.5"
rayon = "1.11"

[dependencies.lscolors]
version = "0.21"
default-features = false
features = ["nu-ansi-term"]

[dependencies.lazy_static]
version = "1.5"
default-features = false

[dependencies.mime_guess]
version = "2.0"
default-features = false

[dependencies.tui]
version = "0.29"
default-features = false
features = ['crossterm', 'serde']
package = 'ratatui'

[dependencies.serde]
version = "1.0"
features = []
default-features = false

[dependencies.indexmap]
version = "2.12"
features = ['serde']

[dependencies.mlua]
version = "0.11"
features = ['luajit', 'serialize', 'send']

[dependencies.tui-input]
version = "0.14"
features = ['serde']

[dev-dependencies]
criterion = "0.6"
assert_cmd = "2.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[features]
default = ["vendored-lua"]
vendored-lua = ["mlua/vendored"]
